--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     ],
     "require": {
         "php": "8.1.*",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "brzuchal/recurrence-rules": "1.x-dev"
     },
     "require-dev": {
         "doctrine/coding-standard": "^9.0",
@@ -22,7 +23,10 @@
     },
     "config": {
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     },
     "autoload": {
         "psr-4": {
