--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "8.1.*",
+        "php": "^8.1",
         "ext-pdo": "*",
         "brzuchal/recurrence-rules": "1.x-dev",
         "ramsey/uuid": "^4.3"
@@ -20,7 +20,7 @@
     "require-dev": {
         "doctrine/coding-standard": "^9.0",
         "phpunit/phpunit": "^9.5",
-        "vimeo/psalm": "^4.21"
+        "vimeo/psalm": "^5"
     },
     "config": {
         "preferred-install": "dist",
